Started adding signup form implementation
